--- a/ECMASscript/ES6/lesson_11_Set_and_Map.html
+++ b/ECMASscript/ES6/lesson_11_Set_and_Map.html
@@ -51,7 +51,7 @@
         <div>WeakMap 应用的典型场合就是 DOM 节点作为键名。</div>
 
         <div id="logo" class="logo"></div>
-        <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+        <script src="../../lib/babel.min.js"></script>
         <script type="text/babel">
             const s = new Set();
             [2, 3, 5, 4, 5, 2, 2].forEach(x => s.add(x));
