--- a/ECMASscript/ES6/lesson_13_Reflect.html
+++ b/ECMASscript/ES6/lesson_13_Reflect.html
@@ -37,9 +37,9 @@
 
         <h4>实例：使用 Proxy 实现观察者模式</h4>
         <div>观察者模式（Observer mode）指的是函数自动观察数据对象，一旦对象有变化，函数就会自动执行。</div>
-        
-        
-        <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+
+
+        <script src="../../lib/babel.min.js"></script>
         <script type="text/babel">
             // 新写法
             // if (Reflect.defineProperty(target, property, attributes)) {
