--- a/ECMASscript/ES6/lesson_14_Promise_object.html
+++ b/ECMASscript/ES6/lesson_14_Promise_object.html
@@ -54,7 +54,7 @@
         <h4>11.Promise.try()</h4>
         <div>让同步函数同步执行，异步函数异步执行，并且让它们具有统一的 API 。</div>
 
-        <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+        <script src="../../lib/babel.min.js"></script>
         <script type="text/babel">
             function timeout(ms) {
                 return new Promise((resolve, reject) => {
