--- a/ECMASscript/ES6/lesson_15_Iterator_and_for_of.html
+++ b/ECMASscript/ES6/lesson_15_Iterator_and_for_of.html
@@ -48,7 +48,7 @@
         <h4>7.for...of循环</h4>
         <div>ES6 借鉴 C++、Java、C# 和 Python 语言，引入了for...of循环，作为遍历所有数据结构的统一的方法。</div>
 
-        <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+        <script src="../../lib/babel.min.js"></script>
         <script type="text/babel">
             let set = new Set().add('a').add('b').add('c');
             let [x,y] = set;
