--- a/ECMASscript/ES6/lesson_16_Generator_Grammar.html
+++ b/ECMASscript/ES6/lesson_16_Generator_Grammar.html
@@ -49,7 +49,7 @@
         <div>3）部署 Iterator 接口；</div>
         <div>4）作为数据结构；</div>
 
-        <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+        <script src="../../lib/babel.min.js"></script>
         <script type="text/babel">
             function* helloWorldGenerator() {
                 yield 'hello';
