--- a/ECMASscript/ES6/lesson_18_async_function.html
+++ b/ECMASscript/ES6/lesson_18_async_function.html
@@ -40,7 +40,7 @@
         <div>为异步操作提供原生的遍历器接口，即value和done这两个属性都是异步产生，这称为”异步遍历器“（Async Iterator）。</div>
         <div>异步遍历器的最大的语法特点，就是调用遍历器的next方法，返回的是一个 Promise 对象。</div>
 
-        <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+        <script src="../../lib/babel.min.js"></script>
         <script type="text/babel">
             // var fs = require('fs');
             // var readFile = function (fileName) {
