--- a/ECMASscript/ES6/lesson_2_let_and_const.html
+++ b/ECMASscript/ES6/lesson_2_let_and_const.html
@@ -30,7 +30,7 @@
       <h4>5.global对象</h4>
       <div>顶层对象的属性与全局变量挂钩，被认为是JavaScript语言最大的设计败笔之一。ES6全局变量（global对象）将逐步与顶层对象的属性脱钩。</div>
 
-      <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+      <script src="../../lib/babel.min.js"></script>
       <script type="text/babel">
         // 第二章  let（局部变量）、const（常量）关键字、块级作用域、顶层对象、global对象
         // ES6 有六种声明变量方式： var命令和function命令、let和const命令、import命令和class命令。
