--- a/ECMASscript/ES6/lesson_3_var_destructuring_assignment.html
+++ b/ECMASscript/ES6/lesson_3_var_destructuring_assignment.html
@@ -41,7 +41,7 @@
       <div>遍历Map结构</div>
       <div>输入模块的指定方法</div>
 
-      <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+      <script src="../../lib/babel.min.js"></script>
       <script type="text/babel">
         // 数组解构赋值 相当于： let a = 1; let b = 2; let c = 3;
         let [a, b, c] = [1, 2, 3];
