--- a/ECMASscript/ES6/lesson_4_string_extension.html
+++ b/ECMASscript/ES6/lesson_4_string_extension.html
@@ -63,7 +63,7 @@
       <div>内嵌其他语言，模板字符串默认会将字符串转义，因此导致了无法嵌入其他语言。对字符串转义的放松，只在标签模板解析字符串时生效</div>
 
       <div id="result"> </div>
-      <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+      <script src="../../lib/babel.min.js"></script>
       <script type="text/babel">
         var strOne = "\u0061";
         // "a"
