--- a/ECMASscript/ES6/lesson_5_regular_extension.html
+++ b/ECMASscript/ES6/lesson_5_regular_extension.html
@@ -52,7 +52,7 @@
       <h4>10.Unicode属性类</h4>
       <div>ES6有一个提案，引入了一种新的类的写法\p{...}和\P{...}，允许正则表达式匹配符合Unicode某种属性的所有字符。</div>
 
-      <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+      <script src="../../lib/babel.min.js"></script>
       <script type="text/babel">
         var regOne = new RegExp(/abc/ig, 'i');
         // "i"
