--- a/ECMASscript/ES6/lesson_6_number_extension.html
+++ b/ECMASscript/ES6/lesson_6_number_extension.html
@@ -72,7 +72,7 @@
       <h4>9.指数运算</h4>
       <div>ES2016 新增了一个指数运算符（**）。</div>
 
-      <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+      <script src="../../lib/babel.min.js"></script>
       <script type="text/babel">
         0b111110111 === 503; // true
         0o767 === 503; // true
