--- a/ECMASscript/ES6/lesson_7_array_extension.html
+++ b/ECMASscript/ES6/lesson_7_array_extension.html
@@ -43,7 +43,7 @@
       <div>ES5对空位的处理，已经很不一致了，大多数情况下会忽略空位。</div>
       <div>ES6则是明确将空位转为undefined。</div>
 
-      <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+      <script src="../../lib/babel.min.js"></script>
       <script type="text/babel">
         let arrayLike = {
               '0': 'a',
