--- a/ECMASscript/ES6/lesson_8_function_extension.html
+++ b/ECMASscript/ES6/lesson_8_function_extension.html
@@ -42,7 +42,7 @@
       <h4>9.函数参数的尾逗号</h4>
       <div>ES2017 允许函数的最后一个参数有尾逗号（trailing comma）。</div>
 
-      <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+      <script src="../../lib/babel.min.js"></script>
       <script type="text/babel">
         function log(x, y = 'World') {
             console.log(x, y);
