--- a/ECMASscript/ES6/lesson_9_object_extension.html
+++ b/ECMASscript/ES6/lesson_9_object_extension.html
@@ -61,7 +61,7 @@
       <div>编程实务中，如果读取对象内部的某个属性，往往需要判断一下该对象是否存在。比如，要读取message.body.user.firstName，安全的写法非常麻烦。</div>
       <div>ES6引入了“Null 传导运算符”（null propagation operator）?.，简化上面的写法。</div>
 
-      <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+      <script src="../../lib/babel.min.js"></script>
       <script type="text/babel">
 
         var foo = 'bar';
