--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
           </li>
 
           <li>
-            <p>22.字体图标:</p>
+            <p>22.图标字体:</p>
             <ul>
               <li><a href="iconfont/index.html" target="_blank">iconfont/index.html</a></li>
             </ul>
