--- a/ECMASscript/ES6/lesson_17_Generator_async_function.html
+++ b/ECMASscript/ES6/lesson_17_Generator_async_function.html
@@ -42,7 +42,7 @@
         <div>co 模块是著名程序员 TJ Holowaychuk 于2013年6月发布的一个小工具，用于 Generator 函数的自动执行。</div>
         <div>源码只有几十行，非常简单。</div>
 
-        <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+        <script src="../../lib/babel.min.js"></script>
         <script type="text/babel">
             function* gen(x) {
                 var y = yield x + 2;
