浏览器渲染、内核笔记添加

--- a/cssFlexBox.html
+++ b/cssFlexBox.html
@@ -9,6 +9,9 @@
       <style>
         /* 在线查CSS API： http://css.doyoe.com/ */
         body { /*direction: rtl;*/ }
+        .demo_source{
+            margin-left:10px;
+        }
         .demo-container{ display: -webkt-flex; display: flex; -webkit-align-content: center; align-content: center; -webkit-flex-wrap: wrap; flex-wrap: wrap; }
         .demo-item{ margin: 10px; }
 
@@ -115,6 +118,7 @@
     </head>
 
     <body>
+        <div class="demo_source"><a href="http://www.w3cplus.com/blog/666.html" target="_blank">本demo 对应教程</a></div>
         <div class="demo-container">
           <div class="demo-item">
             <h3> 设置优先级 order</h3>
