--- a/index.html
+++ b/index.html
@@ -139,9 +139,9 @@
           </li>
 
           <li>
-            <p>18.浏览器检测:</p>
+            <p>18.浏览器信息:</p>
             <ul>
-              <li><a href="utils/client.js" target="_blank">client.js</a></li>
+              <li><a href="browser_info.html" target="_blank">browser_info.html</a></li>
             </ul>
           </li>
 
