ES6 学习笔记更细

--- a/browser_info.html
+++ b/browser_info.html
@@ -40,7 +40,15 @@
             </li>
 
             <li>
-                <h3>3.参考网址：</h3>
+              <h3>3.IE浏览器：“浏览器模式”、“文档模式”</h3>
+              <ul>
+                <li>“浏览器模式”：发送给网站服务器的用户代理（User-Agent）字符串的值，告诉后台服务器当前浏览器版本信息； </li>
+                <li>“文档模式”：用于指定IE的页面排版引擎（Trident）以哪个版本的方式来解析并渲染网页代码。</li>
+              </ul>
+            </li>
+
+            <li>
+                <h3>4.参考网址：</h3>
                 <ul>
                   <li><a href="http://www.cnblogs.com/vajoy/p/3735553.html" target="_blank">博客园：主流浏览器内核介绍 </a></li>
                   <li><a href="https://www.zhihu.com/question/29985708" target="_blank">知乎：如何评价Edge浏览器 </a></li>
