--- a/browser_info.html
+++ b/browser_info.html
@@ -2,7 +2,7 @@
 <html>
     <head>
       <meta name="renderer" content="webkit">
-      <meta http-equiv="X-UA-COMPATIBLE" content="IE=edge,chrome=1"/>
+      <!-- <meta http-equiv="X-UA-COMPATIBLE" content="IE=edge,chrome=1"/> -->
       <meta charset="utf-8">
       <title>
           浏览器信息
