--- a/timer(jq).html
+++ b/timer(jq).html
@@ -4,12 +4,379 @@
     <head>
         <meta charset="utf-8">
         <title>
-          计时器
+          计时器、时钟
         </title>
         <style>
-          .bg{ background-color:#ff4a00; height:100px; color:#FFF; font-size:14px; margin:10px 0px 0px 0px;}
+          .bg{
+              background-color:#ff4a00;
+              height:100px;
+              color:#FFF;
+              font-size:14px;
+              margin:10px 0px 0px 0px;
+              padding: 10px;
+              border-radius: 10px;
+          }
           .time-val{color:'#fff';font-size:30px;}
           .count_down{ font-size:20px; line-height: 100px; width:100px; margin:0 auto; text-align: center; }
+          html{
+            background: url(./images/timer_bg.jpg) #dbe4e6;
+          }
+
+          /*-------------------------
+            	The clocks
+            --------------------------*/
+            #clock{
+            	width:370px;
+            	padding:40px;
+            	margin:30px auto 50px;
+            	position:relative;
+            }
+
+            #clock:after{
+            	content:'';
+            	position:absolute;
+            	width:400px;
+            	height:20px;
+            	border-radius:100%;
+            	left:50%;
+            	margin-left:-200px;
+            	bottom:2px;
+            	z-index:-1;
+            }
+
+
+            #clock .display{
+            	text-align:center;
+            	padding: 40px 20px 20px;
+            	border-radius:6px;
+            	position:relative;
+            	height: 54px;
+            }
+
+
+            /*-------------------------
+            	Light color theme
+            --------------------------*/
+
+
+            #clock.light{
+            	background-color:#f3f3f3;
+            	color:#272e38;
+            }
+
+            #clock.light:after{
+            	box-shadow:0 4px 10px rgba(0,0,0,0.15);
+            }
+
+            #clock.light .digits div span{
+            	background-color:#272e38;
+            	border-color:#272e38;
+            }
+
+            #clock.light .digits div.dots:before,
+            #clock.light .digits div.dots:after{
+            	background-color:#272e38;
+            }
+
+            #clock.light .alarm{
+            	background:url('../img/alarm_light.jpg');
+            }
+
+            #clock.light .display{
+            	background-color:#dddddd;
+            	box-shadow:0 1px 1px rgba(0,0,0,0.08) inset, 0 1px 1px #fafafa;
+            }
+
+
+            /*-------------------------
+            	Dark color theme
+            --------------------------*/
+
+
+            #clock.dark{
+            	background-color:#272e38;
+            	color:#cacaca;
+            }
+
+            #clock.dark:after{
+            	box-shadow:0 4px 10px rgba(0,0,0,0.3);
+            }
+
+            #clock.dark .digits div span{
+            	background-color:#cacaca;
+            	border-color:#cacaca;
+            }
+
+            #clock.dark .alarm{
+            	background:url('../img/alarm_dark.jpg');
+            }
+
+            #clock.dark .display{
+            	background-color:#0f1620;
+            	box-shadow:0 1px 1px rgba(0,0,0,0.08) inset, 0 1px 1px #2d3642;
+            }
+
+            #clock.dark .digits div.dots:before,
+            #clock.dark .digits div.dots:after{
+            	background-color:#cacaca;
+            }
+
+
+            /*-------------------------
+            	The Digits
+            --------------------------*/
+
+
+            #clock .digits div{
+            	text-align:left;
+            	position:relative;
+            	width: 28px;
+            	height:50px;
+            	display:inline-block;
+            	margin:0 4px;
+            }
+
+            #clock .digits div span{
+            	opacity:0;
+            	position:absolute;
+            	-webkit-transition:0.25s;
+            	-moz-transition:0.25s;
+            	transition:0.25s;
+            }
+
+            #clock .digits div span:before,
+            #clock .digits div span:after{
+            	content:'';
+            	position:absolute;
+            	width:0;
+            	height:0;
+            	border:5px solid transparent;
+            }
+
+            #clock .digits .d1{			height:5px;width:16px;top:0;left:6px;}
+            #clock .digits .d1:before{	border-width:0 5px 5px 0;border-right-color:inherit;left:-5px;}
+            #clock .digits .d1:after{	border-width:0 0 5px 5px;border-left-color:inherit;right:-5px;}
+
+            #clock .digits .d2{			height:5px;width:16px;top:24px;left:6px;}
+            #clock .digits .d2:before{	border-width:3px 4px 2px;border-right-color:inherit;left:-8px;}
+            #clock .digits .d2:after{	border-width:3px 4px 2px;border-left-color:inherit;right:-8px;}
+
+            #clock .digits .d3{			height:5px;width:16px;top:48px;left:6px;}
+            #clock .digits .d3:before{	border-width:5px 5px 0 0;border-right-color:inherit;left:-5px;}
+            #clock .digits .d3:after{	border-width:5px 0 0 5px;border-left-color:inherit;right:-5px;}
+
+            #clock .digits .d4{			width:5px;height:14px;top:7px;left:0;}
+            #clock .digits .d4:before{	border-width:0 5px 5px 0;border-bottom-color:inherit;top:-5px;}
+            #clock .digits .d4:after{	border-width:0 0 5px 5px;border-left-color:inherit;bottom:-5px;}
+
+            #clock .digits .d5{			width:5px;height:14px;top:7px;right:0;}
+            #clock .digits .d5:before{	border-width:0 0 5px 5px;border-bottom-color:inherit;top:-5px;}
+            #clock .digits .d5:after{	border-width:5px 0 0 5px;border-top-color:inherit;bottom:-5px;}
+
+            #clock .digits .d6{			width:5px;height:14px;top:32px;left:0;}
+            #clock .digits .d6:before{	border-width:0 5px 5px 0;border-bottom-color:inherit;top:-5px;}
+            #clock .digits .d6:after{	border-width:0 0 5px 5px;border-left-color:inherit;bottom:-5px;}
+
+            #clock .digits .d7{			width:5px;height:14px;top:32px;right:0;}
+            #clock .digits .d7:before{	border-width:0 0 5px 5px;border-bottom-color:inherit;top:-5px;}
+            #clock .digits .d7:after{	border-width:5px 0 0 5px;border-top-color:inherit;bottom:-5px;}
+
+
+            /* 1 */
+
+            #clock .digits div.one .d5,
+            #clock .digits div.one .d7{
+            	opacity:1;
+            }
+
+            /* 2 */
+
+            #clock .digits div.two .d1,
+            #clock .digits div.two .d5,
+            #clock .digits div.two .d2,
+            #clock .digits div.two .d6,
+            #clock .digits div.two .d3{
+            	opacity:1;
+            }
+
+            /* 3 */
+
+            #clock .digits div.three .d1,
+            #clock .digits div.three .d5,
+            #clock .digits div.three .d2,
+            #clock .digits div.three .d7,
+            #clock .digits div.three .d3{
+            	opacity:1;
+            }
+
+            /* 4 */
+
+            #clock .digits div.four .d5,
+            #clock .digits div.four .d2,
+            #clock .digits div.four .d4,
+            #clock .digits div.four .d7{
+            	opacity:1;
+            }
+
+            /* 5 */
+
+            #clock .digits div.five .d1,
+            #clock .digits div.five .d2,
+            #clock .digits div.five .d4,
+            #clock .digits div.five .d3,
+            #clock .digits div.five .d7{
+            	opacity:1;
+            }
+
+            /* 6 */
+
+            #clock .digits div.six .d1,
+            #clock .digits div.six .d2,
+            #clock .digits div.six .d4,
+            #clock .digits div.six .d3,
+            #clock .digits div.six .d6,
+            #clock .digits div.six .d7{
+            	opacity:1;
+            }
+
+
+            /* 7 */
+
+            #clock .digits div.seven .d1,
+            #clock .digits div.seven .d5,
+            #clock .digits div.seven .d7{
+            	opacity:1;
+            }
+
+            /* 8 */
+
+            #clock .digits div.eight .d1,
+            #clock .digits div.eight .d2,
+            #clock .digits div.eight .d3,
+            #clock .digits div.eight .d4,
+            #clock .digits div.eight .d5,
+            #clock .digits div.eight .d6,
+            #clock .digits div.eight .d7{
+            	opacity:1;
+            }
+
+            /* 9 */
+
+            #clock .digits div.nine .d1,
+            #clock .digits div.nine .d2,
+            #clock .digits div.nine .d3,
+            #clock .digits div.nine .d4,
+            #clock .digits div.nine .d5,
+            #clock .digits div.nine .d7{
+            	opacity:1;
+            }
+
+            /* 0 */
+
+            #clock .digits div.zero .d1,
+            #clock .digits div.zero .d3,
+            #clock .digits div.zero .d4,
+            #clock .digits div.zero .d5,
+            #clock .digits div.zero .d6,
+            #clock .digits div.zero .d7{
+            	opacity:1;
+            }
+
+
+            /* The dots */
+
+            #clock .digits div.dots{
+            	width:5px;
+            }
+
+            #clock .digits div.dots:before,
+            #clock .digits div.dots:after{
+            	width:5px;
+            	height:5px;
+            	content:'';
+            	position:absolute;
+            	left:0;
+            	top:14px;
+            }
+
+            #clock .digits div.dots:after{
+            	top:34px;
+            }
+            /*-------------------------
+            	Weekdays
+            --------------------------*/
+            #clock .weekdays{
+            	font-size:12px;
+            	position:absolute;
+            	width:100%;
+            	top:10px;
+            	left:0;
+            	text-align:center;
+            }
+            #clock .weekdays span{
+            	opacity:0.2;
+            	padding:0 10px;
+            }
+            #clock .weekdays span.active{
+            	opacity:1;
+            }
+            /*-------------------------
+            		AM/PM
+            --------------------------*/
+            #clock .ampm{
+            	position:absolute;
+            	bottom:20px;
+            	right:20px;
+            	font-size:12px;
+            }
+
+            /*-------------------------
+            		Button
+            --------------------------*/
+
+            .button-holder{
+            	text-align:center;
+            	padding-bottom:100px;
+            }
+
+            a.button{
+            	background-color:#f6a7b3;
+
+            	background-image:-webkit-linear-gradient(top, #f6a7b3, #f0a3af);
+            	background-image:-moz-linear-gradient(top, #f6a7b3, #f0a3af);
+            	background-image:linear-gradient(top, #f6a7b3, #f0a3af);
+
+            	border:1px solid #eb9ba7;
+            	border-radius:2px;
+
+            	box-shadow:0 2px 2px #ccc;
+
+            	color:#fff;
+            	text-decoration: none !important;
+            	padding:15px 20px;
+            	display:inline-block;
+            	cursor:pointer;
+
+            	position:relative;
+            	z-index: 1;
+            }
+
+            a.button:hover{
+            	opacity:0.9;
+            }
+
+            .alarm-button{
+            	width: 44px;
+            	height: 42px;
+            	vertical-align: middle;
+            	margin-left: -6px;
+            	margin-right: -44px;
+            	display: inline-block;
+            	background: url('../img/alarm_btn.png');
+            	position: relative;
+            	z-index: 0;
+            	cursor: pointer;
+            }
         </style>
         <link rel="icon" href="favicon.ico" type="image/x-icon" />
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
@@ -24,11 +391,24 @@
             <input type="button" id='resetTimeBtn' value='复位时间'>
         </div>
 
-        <div id="con_apa2" , class='bg'>
-        </div>
+        <!-- <div id="con_apa2" , class='bg'>
+        </div> -->
 
-        <script src="lib/jquery-1.10.2.min.js", type="text/javascript">
-        </script>
+        <div id="clock" class="light">
+			<div class="display">
+				<div class="weekdays"></div>
+				<div class="ampm"></div>
+				<div class="alarm"></div>
+				<div class="digits"></div>
+			</div>
+		</div>
+		<div class="button-holder">
+			<a id="switch-theme" class="button">Switch Theme</a>
+			<a class="alarm-button"></a>
+		</div>
+
+        <script src="lib/jquery-1.10.2.min.js", type="text/javascript"></script>
+        <script src="lib/moment.min.js"></script>
 
         <script>
             $(function() {
@@ -90,7 +470,7 @@
 
                 }
 
-                var $countDownWrap = $('#con_apa2');
+                // var $countDownWrap = $('#con_apa2');
                 /**
                  * 3分钟的倒计时(计时器写法2)： 实际项目中， 计时器与业务逻辑解耦优雅实现
                  */
@@ -230,9 +610,94 @@
                 // 计时器1启动
                 countDown1_init();
                 // 计时器2启动
-                CountDown2.init($countDownWrap);
-                CountDown2.start(timeOutFn);;
-            })
+                // CountDown2.init($countDownWrap);
+                // CountDown2.start(timeOutFn);
+
+                // 数字时钟启动(该数字时钟效果代码来自互联网：http://www.cnblogs.com/i7758/p/5081602.html)
+                initDigitsTimer();
+                function initDigitsTimer(){
+                    var clock = $('#clock'),
+                		ampm = clock.find('.ampm');
+
+                	// Map digits to their names (this will be an array)
+                	var digit_to_name = 'zero one two three four five six seven eight nine'.split(' ');
+                	// This object will hold the digit elements
+                	var digits = {};
+                	// Positions for the hours, minutes, and seconds
+                	var positions = [
+                		'h1', 'h2', ':', 'm1', 'm2', ':', 's1', 's2'
+                	];
+                	// Generate the digits with the needed markup,
+                	// and add them to the clock
+                	var digit_holder = clock.find('.digits');
+
+                	$.each(positions, function(){
+                        var digit_item_str = '';
+                		if(this == ':'){
+                			digit_holder.append('<div class="dots">');
+                		} else {
+                			var pos = $('<div>');
+                			for(var i=1; i<8; i++){
+                                digit_item_str += '<span class="d' + i + '"></span>';
+                			}
+                            pos.append(digit_item_str);
+                			// Set the digits as key:value pairs in the digits object
+                			digits[this] = pos;
+                			// Add the digit elements to the page
+                			digit_holder.append(pos);
+                		}
+                	});
+
+                	// Add the weekday names
+                	var weekday_names = 'MON TUE WED THU FRI SAT SUN'.split(' '),
+                		weekday_holder = clock.find('.weekdays');
+                	$.each(weekday_names, function(){
+                		weekday_holder.append('<span>' + this + '</span>');
+                	});
+                	var weekdays = clock.find('.weekdays span');
+                	// Run a timer every second and update the clock
+                	(function update_time(){
+                		// Use moment.js to output the current time as a string
+                		// hh is for the hours in 12-hour format,
+                		// mm - minutes, ss-seconds (all with leading zeroes),
+                		// d is for day of week and A is for AM/PM
+                		var now = moment().format("hhmmssdA");
+                		digits.h1.attr('class', digit_to_name[now[0]]);
+                		digits.h2.attr('class', digit_to_name[now[1]]);
+                		digits.m1.attr('class', digit_to_name[now[2]]);
+                		digits.m2.attr('class', digit_to_name[now[3]]);
+                		digits.s1.attr('class', digit_to_name[now[4]]);
+                		digits.s2.attr('class', digit_to_name[now[5]]);
+
+                		// The library returns Sunday as the first day of the week.
+                		// Stupid, I know. Lets shift all the days one position down,
+                		// and make Sunday last
+                		var dow = now[6];
+                		dow--;
+
+                		// Sunday!
+                		if(dow < 0){
+                			// Make it last
+                			dow = 6;
+                		}
+
+                		// Mark the active day of the week
+                		weekdays.removeClass('active').eq(dow).addClass('active');
+
+                		// Set the am/pm text:
+                		ampm.text(now[7]+now[8]);
+
+                		// Schedule this function to be run again in 1 sec
+                		setTimeout(update_time, 1000);
+
+                	})();
+
+                	// Switch the theme
+                	$('#switch-theme').click(function(){
+                		clock.toggleClass('light dark');
+                	});
+                }
+            });
         </script>
     </body>
 </html>
