--- a/timer(jq).html
+++ b/timer(jq).html
@@ -16,10 +16,19 @@
               padding: 10px;
               border-radius: 10px;
           }
-          .time-val{color:'#fff';font-size:30px;}
-          .count_down{ font-size:20px; line-height: 100px; width:100px; margin:0 auto; text-align: center; }
+          .time-val{
+              color:'#fff';
+              font-size:30px;
+          }
+          .count_down{
+              font-size:20px;
+              line-height: 100px;
+              width:100px;
+              margin:0 auto;
+              text-align: center;
+          }
           html{
-            background: url(./images/timer_bg.jpg) #dbe4e6;
+            background: url(./images/timer_bg.jpg) #eb9ba7;
           }
 
           /*-------------------------
@@ -78,10 +87,6 @@
             	background-color:#272e38;
             }
 
-            #clock.light .alarm{
-            	background:url('../img/alarm_light.jpg');
-            }
-
             #clock.light .display{
             	background-color:#dddddd;
             	box-shadow:0 1px 1px rgba(0,0,0,0.08) inset, 0 1px 1px #fafafa;
@@ -105,10 +110,6 @@
             #clock.dark .digits div span{
             	background-color:#cacaca;
             	border-color:#cacaca;
-            }
-
-            #clock.dark .alarm{
-            	background:url('../img/alarm_dark.jpg');
             }
 
             #clock.dark .display{
@@ -365,18 +366,6 @@
             	opacity:0.9;
             }
 
-            .alarm-button{
-            	width: 44px;
-            	height: 42px;
-            	vertical-align: middle;
-            	margin-left: -6px;
-            	margin-right: -44px;
-            	display: inline-block;
-            	background: url('../img/alarm_btn.png');
-            	position: relative;
-            	z-index: 0;
-            	cursor: pointer;
-            }
         </style>
         <link rel="icon" href="favicon.ico" type="image/x-icon" />
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
@@ -398,13 +387,11 @@
 			<div class="display">
 				<div class="weekdays"></div>
 				<div class="ampm"></div>
-				<div class="alarm"></div>
 				<div class="digits"></div>
 			</div>
 		</div>
 		<div class="button-holder">
 			<a id="switch-theme" class="button">Switch Theme</a>
-			<a class="alarm-button"></a>
 		</div>
 
         <script src="lib/jquery-1.10.2.min.js", type="text/javascript"></script>
