ES6学习笔记更新

--- a/ECMAScript/ES6/index.html
+++ b/ECMAScript/ES6/index.html
@@ -88,6 +88,83 @@
             </ul>
           </li>
 
+          <li>
+            <p>11.Set（类似数组，成员值唯一无重复值） 和 Map（类似对象，对象值可当做健）</p>
+            <ul>
+              <li><a href="lesson_11_Set_and_Map.html" target="_blank">lesson_11_Set_and_Map.html</a></li>
+            </ul>
+          </li>
+
+          <li>
+            <p>12.Proxy（"元编程"，对编程语言进行编程）</p>
+            <ul>
+              <li><a href="lesson_12_Proxy.html" target="_blank">lesson_12_Proxy.html</a></li>
+            </ul>
+          </li>
+
+          <li>
+            <p>13.Reflect（某些方法同时在Object和Reflect对象上部署,未来的新方法将只部署在Reflect对象上）</p>
+            <ul>
+              <li><a href="lesson_13_Reflect.html" target="_blank">lesson_13_Reflect.html</a></li>
+            </ul>
+          </li>
+
+          <li>
+            <p>14.Promise 对象(异步编程的一种解决方案)</p>
+            <ul>
+              <li><a href="lesson_14_Promise_object.html" target="_blank">lesson_14_Promise_object.html</a></li>
+            </ul>
+          </li>
+
+          <li>
+            <p>15.Iterator和for...of循环</p>
+            <ul>
+              <li><a href="lesson_15_Iterator_and_for_of.html" target="_blank">lesson_15_Iterator_and_for_of.html</a></li>
+            </ul>
+          </li>
+
+          <li>
+            <p>16.Generator 函数的语法（一种异步编程解决方案，语法行为与传统函数完全不同）</p>
+            <ul>
+              <li><a href="lesson_16_Generator_Grammar.html" target="_blank">lesson_16_Generator_Grammar.html</a></li>
+            </ul>
+          </li>
+
+          <li>
+            <p>17.Generator 函数的异步应用</p>
+            <ul>
+              <li><a href="lesson_17_Generator_async_function.html" target="_blank">lesson_17_Generator_async_function.html</a></li>
+            </ul>
+          </li>
+
+          <li>
+            <p>18.async 函数（Generator 函数的语法糖）</p>
+            <ul>
+              <li><a href="lesson_18_async_function.html" target="_blank">lesson_18_async_function.html</a></li>
+            </ul>
+          </li>
+
+          <li>
+            <p>19.Class 基本语法</p>
+            <ul>
+              <li><a href="lesson_19_Class_basic.html" target="_blank">lesson_19_Class_basic.html</a></li>
+            </ul>
+          </li>
+
+          <li>
+            <p>20.Class 的继承</p>
+            <ul>
+              <li><a href="lesson_20_class_inherit.html" target="_blank">lesson_20_class_inherit.html</a></li>
+            </ul>
+          </li>
+
+          <li>
+            <p>24.编程风格（ES6最佳实践）</p>
+            <ul>
+              <li><a href="lesson_24_code_style.html" target="_blank">lesson_24_code_style.html</a></li>
+            </ul>
+          </li>
+
         </ul>
       </div>
 
