ES6学习笔记更新

--- a/ECMAScript/ES6/index.html
+++ b/ECMAScript/ES6/index.html
@@ -7,8 +7,8 @@
       <title>
           目录页
       </title>
-      <link rel="icon" href="../favicon.ico" type="image/x-icon" />
-      <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon" />
+      <link rel="icon" href="../../favicon.ico" type="image/x-icon" />
+      <link rel="shortcut icon" href="../../favicon.ico" type="image/x-icon" />
       <style>
         .markdown-body{ background-color: #fff; border: 1px solid #ddd; border-bottom-left-radius: 3px; border-bottom-right-radius: 3px; padding: 30px; word-wrap: break-word; }
       </style>
@@ -159,9 +159,37 @@
           </li>
 
           <li>
+            <p>21.decorator(修饰器, 修改类行为的函数)</p>
+            <ul>
+              <li><a href="lesson_21_decorator.html" target="_blank">lesson_21_decorator.html</a></li>
+            </ul>
+          </li>
+
+          <li>
+            <p>22.Module 的语法</p>
+            <ul>
+              <li><a href="lesson_22_Module.html" target="_blank">lesson_22_Module.html</a></li>
+            </ul>
+          </li>
+
+          <li>
+            <p>23.Module 的加载实现</p>
+            <ul>
+              <li><a href="lesson_23_Practice_of_Module.html" target="_blank">lesson_23_Practice_of_Module.html</a></li>
+            </ul>
+          </li>
+
+          <li>
             <p>24.编程风格（ES6最佳实践）</p>
             <ul>
               <li><a href="lesson_24_code_style.html" target="_blank">lesson_24_code_style.html</a></li>
+            </ul>
+          </li>
+
+          <li>
+            <p>25.ES6规格（标准文档）</p>
+            <ul>
+              <li><a href="lesson_25_ES6_standard.html" target="_blank">lesson_25_ES6_standard.html</a></li>
             </ul>
           </li>
 
