--- a/ECMAScript/ES6/index.html
+++ b/ECMAScript/ES6/index.html
@@ -193,6 +193,13 @@
             </ul>
           </li>
 
+          <li>
+            <p>26.ArrayBuffer</p>
+            <ul>
+              <li><a href="lesson_26_ArrayBuffer.html" target="_blank">lesson_26_ArrayBuffer.html</a></li>
+            </ul>
+          </li>
+
         </ul>
       </div>
 
