--- a/index.html
+++ b/index.html
@@ -174,6 +174,13 @@
           </li>
 
           <li>
+            <p>23.HTML转义字符:</p>
+            <ul>
+              <li><a href="EscapeSequence.html" target="_blank">EscapeSequence.html</a></li>
+            </ul>
+          </li>
+
+          <li>
             <p>other:</p>
             <ul>
               <li><a href="challenge_case/index.html" target="_blank">项目开发中遇到的bug小demo</a></li>
