--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
             <p>5.原生js 节点操作：</p>
             <ul>
               <li><a href="nodeOperate.html" target="_blank">nodeOperate.html</a></li>
+              <li><a href="DOM_demo.html" target="_blank">DOM_demo.html</a></li>
             </ul>
           </li>
 
