--- a/index.html
+++ b/index.html
@@ -197,6 +197,13 @@
               <li><a href="angular/angularRoute.html" target="_blank">angularjs 路由demo</a></li>
             </ul>
           </li>
+
+          <li>
+            react:
+            <ul>
+              <li><a href="react/index.html" target="_blank">react 开发</a></li>
+            </ul>
+          </li>
         </ul>
       </div>
 
