feat: update redux demo

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
           <li>
             react:
             <ul>
-              <li><a href="react/index.html" target="_blank">react 开发</a></li>
+              <li><a href="react/index.html" target="_blank">react 学习笔记</a></li>
             </ul>
           </li>
         </ul>
