--- a/react/redux_learn.html
+++ b/react/redux_learn.html
@@ -41,6 +41,34 @@
               </ul>
             </li>
 
+            <li>
+              <h3>2.redux 进阶 dva；</h3>
+              <ul>
+                <li>
+                  <a href="https://dvajs.com/" target="_blank">dva 官网教程</a>
+                </li>
+                <li>
+                  <a href="https://dvajs.com/knowledgemap/" target="_blank">dva知识地图</a>
+                </li>
+                <li>
+                  <a href="https://dvajs.com/guide/fig-show.html" target="_blank">dva图解</a>
+                </li>
+              </ul>
+            </li>
+
+            <li>
+                <h3>3.redux 学习demo；</h3>
+                <ul>
+                  <li>以下demo均为编译后html，编译前脚本在对应文件夹内;</li>
+                  <li>
+                    <a href="redux/demo_1.html" target="_blank">redux基础demo1 - React-Redux计数器</a> 
+                  </li>
+                  <li>
+                    <a href="dva/demo_1.html" target="_blank">dva图解 demo1</a>
+                  </li>
+                </ul>
+              </li>
+
           </ul>
       </div>
     </body>
