--- a/react/index.html
+++ b/react/index.html
@@ -1,38 +1,50 @@
 <!DOCTYPE html>
 <html>
-    <head>
-      <meta name="renderer" content="webkit">
-      <meta http-equiv="X-UA-COMPATIBLE" content="IE=edge,chrome=1"/>
-      <meta charset="utf-8">
-      <title>
-        目录页
-      </title>
-      <link rel="icon" href="../favicon.ico" type="image/x-icon" />
-      <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon" />
-      <style>
-        .markdown-body{ background-color: #fff; border: 1px solid #ddd; border-bottom-left-radius: 3px; border-bottom-right-radius: 3px; padding: 30px; word-wrap: break-word; }
-      </style>
-    </head>
+  <head>
+    <meta name="renderer" content="webkit" />
+    <meta http-equiv="X-UA-COMPATIBLE" content="IE=edge,chrome=1" />
+    <meta charset="utf-8" />
+    <title>
+      目录页
+    </title>
+    <link rel="icon" href="../favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon" />
+    <style>
+      .markdown-body {
+        background-color: #fff;
+        border: 1px solid #ddd;
+        border-bottom-left-radius: 3px;
+        border-bottom-right-radius: 3px;
+        padding: 30px;
+        word-wrap: break-word;
+      }
+    </style>
+  </head>
 
-    <body>
-      <div class="markdown-body">
-        <h3><a id="flash_demo" class="anchor" href="#" aria-hidden="true"><span class="octicon octicon-link"></span></a>React开发 Demo 列表</h3>
-        <ul>
-          <li>
-            <p>1.React 入门学习资料</p>
-            <ul>
-              <li><a href="begin_learn.html" target="_blank">begin_learn.html</a></li>
-            </ul>
-          </li>
+  <body>
+    <div class="markdown-body">
+      <h3>
+        React学习笔记列表
+      </h3>
+      <ul>
+        <li>
+          <p>1.React 入门学习资料</p>
+          <ul>
+            <li>
+              <a href="begin_learn.html" target="_blank">begin_learn.html</a>
+            </li>
+          </ul>
+        </li>
 
-          <li>
-            <p>1.React 进阶</p>
-            <ul>
-              <li><a href="redux_learn.html" target="_blank">redux_learn.html</a></li>
-            </ul>
-          </li>
-        </ul>
-      </div>
-
-    </body>
+        <li>
+          <p>2.React 进阶</p>
+          <ul>
+            <li>
+              <a href="redux_learn.html" target="_blank">redux_learn.html</a>
+            </li>
+          </ul>
+        </li>
+      </ul>
+    </div>
+  </body>
 </html>
