feat: dva demo1 done

--- a/react/dva/demo_1/index.html
+++ b/react/dva/demo_1/index.html
@@ -2,10 +2,9 @@
 	<head>
     <meta charset="utf-8" />
 		<title>react todo list</title>
-    <link rel="icon" href="../../favicon.ico" type="image/x-icon" />
 	</head>
 	<body>
 		<div id="root" />
-		<h1>coding...</h1>
+		<script type="text/javascript" src="bundle.js"></script>
 	</body>
 </html>
