--- a/react/redux_learn.html
+++ b/react/redux_learn.html
@@ -64,7 +64,7 @@
                     <a href="redux/demo_1.html" target="_blank">redux基础demo1 - React-Redux计数器</a> 
                   </li>
                   <li>
-                    <a href="dva/demo_1.html" target="_blank">dva图解 demo1</a>
+                    <a href="dva/demo_1/index.html" target="_blank">dva图解 demo1</a>
                   </li>
                 </ul>
               </li>
