feat: dva demo2 done

--- a/react/dva/demo_2/index.html
+++ b/react/dva/demo_2/index.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
     <meta charset="utf-8" />
-		<title>react todo list - react</title>
+		<title>react todo list - redux</title>
 	</head>
 	<body>
 		<div id="root" />
