--- a/react/redux_learn.html
+++ b/react/redux_learn.html
@@ -66,6 +66,9 @@
                   <li>
                     <a href="dva/demo_1/index.html" target="_blank">dva图解 demo1</a>
                   </li>
+                  <li>
+                    <a href="dva/demo_2/index.html" target="_blank">dva图解 demo2</a>
+                  </li>
                 </ul>
               </li>
 
