feat: dva demo3 done

--- a/react/redux_learn.html
+++ b/react/redux_learn.html
@@ -69,6 +69,12 @@
                   <li>
                     <a href="dva/demo_2/index.html" target="_blank">dva图解 demo2</a>
                   </li>
+                  <li>
+                    <a href="dva/demo_2/index.html" target="_blank">dva图解 demo3</a>
+                  </li>
+                  <li>
+                    <a href="dva/demo_2/index.html" target="_blank">dva图解 demo4</a>
+                  </li>
                 </ul>
               </li>
 
