--- a/ECMAScript/ES6/index.html
+++ b/ECMAScript/ES6/index.html
@@ -19,6 +19,12 @@
         <h3><a class="anchor" href="#" aria-hidden="true"><span class="octicon octicon-link"></span></a>ES6学习 列表</h3>
         <ul>
           <li>
+            <p>参考资料；</p>
+            <ul>
+              <li><a href="EcmaScript6.html" target="_blank">EcmaScript6.html</a></li>
+            </ul>
+          </li>
+          <li>
             <p>1.ES6 简介；</p>
             <ul>
               <li><a href="lesson_1_ECMAScript6_intro.html" target="_blank">lesson_1_ECMAScript6_intro.html</a></li>
