--- a/ECMAScript/ES6/lesson_14_Promise_object.html
+++ b/ECMAScript/ES6/lesson_14_Promise_object.html
@@ -54,6 +54,9 @@
         <h4>11.Promise.try()</h4>
         <div>让同步函数同步执行，异步函数异步执行，并且让它们具有统一的 API 。</div>
 
+        <h4>其他:</h4>
+        <div><a href="https://www.cnblogs.com/malingyang/p/6535805.html">ES5 实现 ES6 promise</a></div>
+
         <script src="../../lib/babel.min.js"></script>
         <script type="text/babel">
             function timeout(ms) {
